--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           </div>
       </div>
       <div class="panel panel-default">
+
           <div class="panel-heading" role="tab" id="headingThree">
                <h4 class="panel-title">
           <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -85,7 +86,8 @@
                   </ul>
               </div>
           </div>
-          <div class="panel panel-default">
+      </div> 
+      <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                    <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseOne">
