--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                   <ul>                
-                      <li><a href="http://learn.code.org/hoc/1" target="_blank">Angry Birds</a>
+                      <li><a href="http://learn.code.org/hoc/1" target="_blank">Lets play the game</a>
                       </li>
                   </ul>
               </div>
