Updated Bootstrap link

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               <div class="panel-heading" role="tab" id="headingOne">
                    <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="true" aria-controls="collapseOne">
-          Frameworks
+          Bootstrap
           </a>
         </h4>
 
