Updated Google title

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="panel-heading" role="tab" id="headingTwo">
                <h4 class="panel-title">
           <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Google Usage
+            How to Google?
           </a>
         </h4>
 
