--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
     <script src="javascripts/jquery-1.11.2.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
+    <script src="javascripts/main.js"></script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -21,13 +22,18 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Sitepool</h1>
-        <a href="https://github.com/rtvalluri/sitepool" class="button"><small>View project on</small> GitHub</a>
+        <h1><a href="http://rtvalluri.github.io/sitepool" class="brand btn-hvr">Sitepool</a></h1>
+        <span id="info-btn" class="button btn-hvr">What is this?</span>
       </div>
     </header>
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          <div id="about-sitepool" class="container-fluid panel-group">
+            <button id="hide">hide</button>
+            <h3>What is Sitepool?</h3>
+            <p>Sitepool is collection of various wesites for various technologies. All the sites listed here are from my learnings</p>
+          </div>
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
@@ -332,10 +338,11 @@
           </div><!-- End of accordion div -->
         </section>
         <aside id="sidebar">
-          <a href="https://github.com/rtvalluri/sitepool/zipball/master" class="button">
+          <a href="https://github.com/rtvalluri/sitepool" class="button btn-hvr" id="github-btn"><small>View project on</small> GitHub</a>
+          <a href="https://github.com/rtvalluri/sitepool/zipball/master" class="button btn-hvr">
             <small>Download</small>.zip file
           </a>
-          <a href="https://github.com/rtvalluri/sitepool/tarball/master" class="button">
+          <a href="https://github.com/rtvalluri/sitepool/tarball/master" class="button btn-hvr">
             <small>Download</small>.tar.gz file
           </a>
           <p class="repo-owner"><a href="https://github.com/rtvalluri/sitepool"></a> is maintained by <a href="https://github.com/rtvalluri">Raviteja Valluri</a></p>
