Description about the  Sitepool added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div id="about-sitepool" class="container-fluid panel-group">
             <button id="hide">hide</button>
             <h3>What is Sitepool?</h3>
-            <p>Sitepool is collection of various wesites for various technologies. All the sites listed here are from my learnings -- <a href="https://github.com/rtvalluri">Raviteja Valluri</a></p>
+            <p>Sitepool is collection of various wesites for various technologies. All the sites listed here are from my various synonyms -- <a href="https://github.com/rtvalluri">Raviteja Valluri</a></p>
           </div>
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
