Links css modified

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                   <ul>
-                    <li><a href="http://learnpythonthehardway.org/book/" target="_blank">Python for Beginners</a>
+                    <li><a href="http://learnpythonthehardway.org/book/" target="_blank">Learn Python the hard way</a>
                     </li>
                   </ul>
                 </div>
@@ -236,7 +236,9 @@
               <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                   <ul>
-                    <li><a href="http://learnrubythehardway.org/book/" target="_blank">Ruby for Beginners</a>
+                    <li><a href="http://tryruby.org" target="_blank">Interactive way to learn Ruby</a>
+                    </li>
+                    <li><a href="http://learnrubythehardway.org/book/" target="_blank">Learn Ruby the hard way</a>
                     </li>
                   </ul>
                 </div>
