--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div id="about-sitepool" class="container-fluid panel-group">
             <button id="hide">hide</button>
             <h3>What is Sitepool?</h3>
-            <p>Sitepool is collection of various wesites for various technologies. All the sites listed here are from various sources.Hope these links will help your learning :)</p>
+            <p>Sitepool is collection of various wesites for various technologies. All the sites listed here are from various sources.Hope these links will help your learning. <h5>HappY LearninG :)</h5></p>
           </div>
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
