aria-lables updated and header padding adjusted

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                   Learn JS
                   </a>
                 </h4>
               </div>
-              <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://www.codecademy.com/en/tracks/javascript" target="_blank">Full on</a>
@@ -109,12 +109,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
                   CSS
                   </a>
                 </h4>
               </div>
-              <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://code.tutsplus.com/tutorials/the-30-css-selectors-you-must-memorize--net-16048" target="_blank">Css Selectors Intro</a>
@@ -138,12 +138,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
                   Choose Colors
                   </a>
                 </h4>
               </div>
-              <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
                 <div class="panel-body">
                   <ul>                      
                     <li><a href="http://colorsafe.co/" target="_blank">Choose Accessible colors for your Text</a></li>                    
@@ -154,12 +154,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
                   Learn CLI
                   </a>
                 </h4>
               </div>
-              <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://cli.learncodethehardway.org/book/" target="_blank">CLI for Beginners</a>
@@ -171,12 +171,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
                   Learn C
                   </a>
                 </h4>
               </div>
-              <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://c.learncodethehardway.org/book/" target="_blank">C for Beginners</a>
@@ -188,12 +188,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
                   Learn SQL
                   </a>
                 </h4>
               </div>
-              <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://sql.learncodethehardway.org/book/" target="_blank">SQL</a>
@@ -205,12 +205,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
                   Learn Python
                   </a>
                 </h4>
               </div>
-              <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://learnpythonthehardway.org/book/" target="_blank">Learn Python the hard way</a>
@@ -222,12 +222,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
                   Learn Ruby
                   </a>
                 </h4>
               </div>
-              <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEleven">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://tryruby.org" target="_blank">Interactive way to learn Ruby</a>
@@ -241,12 +241,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="true" aria-controls="collapseThirteen">
                   AngularJS
                   </a>
                 </h4>
               </div>
-              <div id="collapseThirteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseThirteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThirteen">
                 <div class="panel-body">
                   <ul>                                            
                     <li><a href="https://thinkster.io/angulartutorial/a-better-way-to-learn-angularjs/" target="_blank">Better way to AJS</a>
@@ -262,12 +262,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="true" aria-controls="collapseFourteen">
                   Responsive Frameworks
                   </a>
                 </h4>
               </div>
-              <div id="collapseFourteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseFourteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFourteen">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://foundation.zurb.com/" target="_blank">Foundation</a>
@@ -283,12 +283,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="true" aria-controls="collapseFifteen">
                   Jquery Video Tutorials
                   </a>
                 </h4>
               </div>
-              <div id="collapseFifteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseFifteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFifteen">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://try.jquery.com/" target="_blank">JQuery Videos</a>
@@ -300,12 +300,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="true" aria-controls="collapseSixteen">
                   Extrenal
                   </a>
                 </h4>
               </div>
-              <div id="collapseSixteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseSixteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSixteen">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://www.thewildernessdowntown.com/" target="_blank">Advanced</a>
@@ -317,12 +317,12 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="true" aria-controls="collapseSeventeen">
                   D3.js Library
                   </a>
                 </h4>
               </div>
-              <div id="collapseSeventeen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseSeventeen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeventeen">
                 <div class="panel-body">
                   <ul>
                     <li><a href="http://d3js.org/" target="_blank">D3.js official</a>
@@ -338,12 +338,12 @@
              <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="true" aria-controls="collapseOne">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="true" aria-controls="collapseEighteen">
                   Miscellaneous
                   </a>
                 </h4>
               </div>
-              <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEighteen">
                 <div class="panel-body">
                   <ul>                      
                     <li><a href="http://runnable.com/" target="_blank">Run your code</a></li>
