Fixed typo in site description

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div id="about-sitepool" class="container-fluid panel-group">
             <button id="hide">hide</button>
             <h3>What is Sitepool?</h3>
-            <p>Sitepool is simply collection of webites for different technologies,gathered from various sources.Hope these links will help your learning.<h5>HappY LearninG :)</h5></p>
+            <p>Sitepool is simply collection of websites for different technologies,gathered from various sources.Hope these links will help your learning.<h5>HappY LearninG :)</h5></p>
           </div> <!-- End of about-sitepool div -->
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
