Responsive template links added

--- a/index.html
+++ b/index.html
@@ -275,7 +275,10 @@
                 <div class="panel-body">
                   <ul>                                            
                     <li><a href="http://html5up.net/" target="_blank" title="Free Responsive HTML5 Templates">Free Responsive HTML5 Templates</a>
-                    </li>                    
+                    </li>
+                    <li><a href="http://foundation.zurb.com/templates.html" target="_blank" title="Foundation Templates">Foundation Templates</a>
+                    </li>
+                                        
                   </ul>
                 </div>
               </div>
@@ -357,7 +360,9 @@
               </div>
               <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEighteen">
                 <div class="panel-body">
-                  <ul>                      
+                  <ul>
+                    <li><a href="http://w3schools.com/" target="_blank">W3schools</a></li>
+                    <li><a href="http://tutorialspoint.com/" target="_blank">TutorialsPoint</a></li>
                     <li><a href="http://runnable.com/" target="_blank">Run your code</a></li>
                     <li><a href="http://webdesign.tutsplus.com/tutorials/getting-to-know-github-pages-static-project-pages-fast--webdesign-11501" target="_blank">Make your Github page</a>
                     </li>
