Responsive template links added

--- a/index.html
+++ b/index.html
@@ -278,6 +278,10 @@
                     </li>
                     <li><a href="http://foundation.zurb.com/templates.html" target="_blank" title="Foundation Templates">Foundation Templates</a>
                     </li>
+                    <li><a href="http://www.gettemplate.com/" target="_blank" title="GetTemplates">Templates by Gettemplate.com</a>
+                    </li>
+                    <li><a href="http://startbootstrap.com/" target="_blank" title="Start Bootstrap">Bootstrap Templates</a>
+                    </li>
                                         
                   </ul>
                 </div>
