Added links for Learning C

--- a/index.html
+++ b/index.html
@@ -166,8 +166,10 @@
               <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                 <div class="panel-body">
                   <ul>
-                    <li><a href="http://cli.learncodethehardway.org/book/" target="_blank" title="CLI for beginners">CLI for Beginners</a>
+                    <li><a href="http://www.learn-c.org/" target="_blank" title="CLI for beginners">Interactive way to learn C</a>
                     </li>
+                    <li><a href="http://cli.learncodethehardway.org/book/" target="_blank" title="CLI for beginners">CLI for Beginners</a>
+                    </li>                  
                   </ul>
                 </div>
               </div>
