Added links for Validators

--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
                     </li>                  
                     <li><a href="http://enjoycss.com/" target="_blank" title="Automatic CSS3 Generator">Automatic CSS3 Generator</a>
                     </li>
+                    <li><a href="http://ilikepixels.co.uk/" target="_blank" title="I like Pixels">I like Pixels</a>
+                    </li>
+                    <li><a href="http://css-tricks.com/examples/ShapesOfCSS/" target="_blank" title="CSS3  Shapeskit">CSS3  Shapeskit</a>
+                    </li>
+                    <li><a href="http://www.colorzilla.com/gradient-editor/" target="_blank" title="ColorZilla Gradient Generator">ColorZilla Gradient Generator</a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -273,7 +279,9 @@
                     <li><a href="http://getbootstrap.com/" target="_blank" title="Bootstrap">Bootstrap</a>
                     </li>                   
                     <li><a href="http://www.tutorialspoint.com/bootstrap/" target="_blank" title="Learn Bootstrap">Learn Bootstrap</a>
-                    </li>                    
+                    </li>
+                    <li><a href="http://metroui.org.ua/" target="_blank" title="Metro UI">Metro UI</a>
+                    </li>                     
                   </ul>
                 </div>
               </div>
@@ -281,37 +289,26 @@
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingFifteen">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="true" aria-controls="collapseFifteen" title="">
-                  Jquery Video Tutorials
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="true" aria-controls="collapseFifteen">
+                  Validators
                   </a>
                 </h4>
               </div>
               <div id="collapseFifteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFifteen">
                 <div class="panel-body">
                   <ul>
-                    <li><a href="http://try.jquery.com/" target="_blank">JQuery Videos</a>
+                    <li><a href="http://validator.w3.org/" target="_blank" title="W3C HTML VALIDATOR">W3C HTML Validator</a>
+                    </li>
+                    <li><a href="https://jigsaw.w3.org/css-validator/" target="_blank" title="W3C CSS Validator">W3C CSS Validator</a>
+                    </li>
+                    <li><a href="http://csslint.net/" target="_blank" title="CSS Lint">CSS Lint</a>
+                    </li>
+                    <li><a href="http://www.csstidyonline.com/" target="_blank" title="CSS Tidy">CSS Tidy</a>
                     </li>
                   </ul>
                 </div>
               </div>
-            </div><!-- End of div -->
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingSixteen">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="true" aria-controls="collapseSixteen">
-                  Extrenal
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseSixteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSixteen">
-                <div class="panel-body">
-                  <ul>
-                    <li><a href="http://www.thewildernessdowntown.com/" target="_blank">Advanced</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div><!-- End of div -->
+            </div><!-- End of div -->      
             <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingSeventeen">
                 <h4 class="panel-title">
