--- a/index.html
+++ b/index.html
@@ -367,7 +367,9 @@
               <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEighteen">
                 <div class="panel-body">
                   <ul>
-                    <li><a href="http://w3schools.com/" target="_blank">W3schools</a></li>
+                    <li><a href="http://w3schools.com/" target="_blank">W3schools
+                    </a></li>
+                    <li><a href="http://codecademy.com/" target="_blank">Codecademy</a></li>
                     <li><a href="http://tutorialspoint.com/" target="_blank">TutorialsPoint</a></li>
                     <li><a href="http://runnable.com/" target="_blank">Run your code</a></li>
                     <li><a href="http://webdesign.tutsplus.com/tutorials/getting-to-know-github-pages-static-project-pages-fast--webdesign-11501" target="_blank">Make your Github page</a>
