renamed w3schools to html in Miscellaneous

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <div class="panel-heading" role="tab" id="headingSix">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-                  Choose Colors
-                  </a>
+                  Choose Colors HTMl Text
+                  </a> 
                 </h4>
               </div>
               <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
@@ -367,7 +367,7 @@
               <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEighteen">
                 <div class="panel-body">
                   <ul>
-                    <li><a href="http://w3schools.com/" target="_blank">W3schools
+                    <li><a href="http://w3schools.com/" target="_blank">Learn HTML
                     </a></li>
                     <li><a href="http://codecademy.com/" target="_blank">Codecademy</a></li>
                     <li><a href="http://tutorialspoint.com/" target="_blank">TutorialsPoint</a></li>
