Renamed Colors link

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <div class="panel-heading" role="tab" id="headingSix">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-                  Choose Colors HTMl Text
+                  Choose Colors for HTML Text
                   </a> 
                 </h4>
               </div>
