Added w3 layouts link to responsive templates

--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
                     </li>
                     <li><a href="http://startbootstrap.com/" target="_blank" title="Start Bootstrap">Bootstrap Templates</a>
                     </li>
-                                        
+                    <li><a href="http://w3layouts.com/" target="_blank" title="W3 Layouts">W3 Layouts</a>
+                    </li>                                  
                   </ul>
                 </div>
               </div>
