Added wow css link to Miscellaneous

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <li><a href="http://css-tricks.com/examples/ShapesOfCSS/" target="_blank" title="CSS3  Shapeskit">CSS3 Shapeskit</a>
                     </li>
                     <li><a href="http://www.colorzilla.com/gradient-editor/" target="_blank" title="ColorZilla Gradient Generator">ColorZilla Gradient Generator</a>
-                    </li>
+                    </li>                  
                   </ul>
                 </div>
               </div>
@@ -373,6 +373,8 @@
                   <ul>
                     <li><a href="http://w3schools.com/" target="_blank">Learn HTML
                     </a></li>
+                    <li><a href="http://mynameismatthieu.com/WOW/" target="_blank" title="WOW CSS">WoW CSS</a>
+                    </li>
                     <li><a href="http://codecademy.com/" target="_blank">Codecademy</a></li>
                     <li><a href="http://tutorialspoint.com/" target="_blank">TutorialsPoint</a></li>
                     <li><a href="https://try.github.io" target="_blank">Learn GIT in 15mins</a></li>              
