Added Awesome Plugins

--- a/index.html
+++ b/index.html
@@ -360,21 +360,38 @@
                 </div>
               </div>
             </div><!-- End of div -->
-             <div class="panel panel-default">
+            <div class="panel panel-default">
               <div class="panel-heading" role="tab" id="headingEighteen">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="true" aria-controls="collapseEighteen">
-                  Miscellaneous
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="true" aria-controls="collapseEighteen" title="Learn D3JS">
+                  Awesome Plugins
                   </a>
                 </h4>
               </div>
               <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEighteen">
                 <div class="panel-body">
                   <ul>
-                    <li><a href="http://w3schools.com/" target="_blank">Learn HTML
-                    </a></li>
-                    <li><a href="http://mynameismatthieu.com/WOW/" target="_blank" title="WOW CSS">WoW CSS</a>
+                    <li><a href="http://mynameismatthieu.com/WOW/" target="_blank" title="WOW CSS">WOW CSS Animations</a>
                     </li>
+                    <li><a href="http://www.outyear.co.uk/smint/" target="_blank" title="Smint">Sticky menu plugin</a>
+                    </li>              
+                  </ul>
+                </div>
+              </div>
+            </div><!-- End of div -->
+             <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingNineteen">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="true" aria-controls="collapseNineteen">
+                  Miscellaneous
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseNineteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNineteen">
+                <div class="panel-body">
+                  <ul>
+                    <li><a href="http://w3schools.com/" target="_blank">Learn HTML
+                    </a></li>                    
                     <li><a href="http://codecademy.com/" target="_blank">Codecademy</a></li>
                     <li><a href="http://tutorialspoint.com/" target="_blank">TutorialsPoint</a></li>
                     <li><a href="https://try.github.io" target="_blank">Learn GIT in 15mins</a></li>              
