--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
     <script src="javascripts/jquery-1.11.2.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
+    <script src="javascripts/wow.js"></script>
     <script src="javascripts/main.js"></script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,7 +37,7 @@
             <p>Sitepool is simply collection of websites for different technologies,gathered from various sources.Hope these links will help your learning.<h5>HappY LearninG :)</h5></p>
           </div> <!-- End of about-sitepool div -->
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp wow bounceInUp">
                 <div class="panel-heading" role="tab" id="headingOne">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" title="How to Google">
@@ -52,7 +54,7 @@
                   </div>
                 </div>
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
                 <div class="panel-heading" role="tab" id="headingTwo">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" title="Introduction to Programming">
@@ -68,7 +70,7 @@
                   </div>
                 </div>
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
                 <div class="panel-heading" role="tab" id="headingThree">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" title="One stop for Programming">
@@ -85,7 +87,7 @@
                   </div>
                 </div>
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingFour">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour" title="Learn JavaScript">
@@ -106,7 +108,7 @@
                 </div>
               </div> 
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingFive">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive" title="Cascading Style Sheets">
@@ -139,7 +141,7 @@
                 </div>
               </div>
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingSix">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
@@ -155,7 +157,7 @@
                 </div>
               </div>
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingSeven">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven" title="Learn Command-Line-Interface">
@@ -174,7 +176,7 @@
                 </div>
               </div>
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingEight">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
@@ -191,7 +193,7 @@
                 </div>
               </div>
             </div> <!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingNine">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="true" aria-controls="collapseNine" title="Learn Structured-Query-Language">
@@ -208,7 +210,7 @@
                 </div>
               </div>
             </div> <!--End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingTen">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="true" aria-controls="collapseTen" title="Learn Python">
@@ -225,7 +227,7 @@
                 </div>
               </div>
             </div><!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingEleven">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven" title="Learn Ruby">
@@ -244,7 +246,7 @@
                 </div>
               </div>
             </div><!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingTwelve">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve" aria-expanded="true" aria-controls="collapseTwelve" title="Learn AngularJS">
@@ -265,7 +267,7 @@
                 </div>
               </div>
             </div><!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingThirteen">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="true" aria-controls="collapseThirteen" title="Learn AngularJS">
@@ -290,7 +292,7 @@
                 </div>
               </div>
             </div><!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingFourteen">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="true" aria-controls="collapseFourteen" title="Responsive Frameworks">
@@ -316,7 +318,7 @@
                 </div>
               </div>
             </div><!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingFifteen">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="true" aria-controls="collapseFifteen">
@@ -339,7 +341,7 @@
                 </div>
               </div>
             </div><!-- End of div -->      
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingSeventeen">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="true" aria-controls="collapseSeventeen" title="Learn D3JS">
@@ -360,7 +362,7 @@
                 </div>
               </div>
             </div><!-- End of div -->
-            <div class="panel panel-default">
+            <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingEighteen">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="true" aria-controls="collapseEighteen" title="Learn D3JS">
@@ -379,7 +381,7 @@
                 </div>
               </div>
             </div><!-- End of div -->
-             <div class="panel panel-default">
+             <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingNineteen">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="true" aria-controls="collapseNineteen">
@@ -408,7 +410,7 @@
             </div> <!-- End of div -->
           </div><!-- End of accordion div -->
         </section>
-        <aside id="sidebar">
+        <aside id="sidebar" class="wow bounceInUp">
           <a href="https://github.com/rtvalluri/sitepool" class="button btn-hvr" id="github-btn"><small>View project on</small> GitHub</a>
           <a href="https://github.com/rtvalluri/sitepool/zipball/master" class="button btn-hvr">
             <small>Download</small>.zip file
@@ -423,6 +425,7 @@
 
     </div> <!-- End of content-wrapper -->
     <script>
+      new WOW().init();
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -431,6 +434,6 @@
       ga('create', 'UA-60220843-1', 'auto');
       ga('send', 'pageview');
 
-</script>
+    </script>
   </body>
 </html>`
