Added jqueryscript.net link to Awesome plugins

--- a/index.html
+++ b/index.html
@@ -376,7 +376,10 @@
                     <li><a href="http://mynameismatthieu.com/WOW/" target="_blank" title="WOW CSS">WOW CSS Animations</a>
                     </li>
                     <li><a href="http://www.outyear.co.uk/smint/" target="_blank" title="Smint">Sticky menu plugin</a>
-                    </li>              
+                    </li>
+                    <li><a href="http://www.jqueryscript.net/" target="_blank" title="jqueryscript.net">jQuery plugins</a>
+                    </li>
+                                  
                   </ul>
                 </div>
               </div>
