Color selection link added

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
               <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                 <div class="panel-body">
                   <ul>                      
-                    <li><a href="http://colorsafe.co/" target="_blank" title="Choose Accessible colors for your Text">Choose Accessible colors for your Text</a></li>                    
+                    <li><a href="http://colorsafe.co/" target="_blank" title="Choose Accessible colors for your Text">Choose Accessible colors for your Text</a></li>
+                    <li><a href="http://colourco.de/" target="_blank" title="Choose colors for your Text">Choose the color</a></li>
                   </ul>
                 </div>
               </div>
