--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                     <li><a href="http://try.jquery.com/" target="_blank" title="Interactive way to learn JQuery">Interactive way to learn JQuery</a>
                     <li><a href="http://www.jquery-steps.com/" target="_blank" title="Ready to use Wizards in JQuery">Ready to use Wizards in JQuery</a>
                     </li>
-                    </li>                            
+                    </li>
+                    <li><a href="http://jstherightway.org/" target="_blank" title="Is js the right way">JS the right way</a>
+                    </li>   
                   </ul>
                 </div>
               </div> 
