JQuery link added

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                     </li>
                     </li>
                     <li><a href="http://jstherightway.org/" target="_blank" title="Is js the right way">JS the right way</a>
-                    </li>   
+                    </li>
+                    <li><a href="http://www.learningjquery.com/" target="_blank" title="Learn Jquery">Learning jQuery</a>
+                    </li>
                   </ul>
                 </div>
               </div> 
