Added learnshayhowe.com to miscellaneous

--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
                     </a></li>                    
                     <li><a href="http://codecademy.com/" target="_blank">Codecademy</a></li>
                     <li><a href="http://tutorialspoint.com/" target="_blank">TutorialsPoint</a></li>
+                    <li><a href="http://learn.shayhowe.com/" target="_blank">Learn HTML and CSS</a></li>
                     <li><a href="https://try.github.io" target="_blank">Learn GIT in 15mins</a></li>              
                     <li><a href="http://runnable.com/" target="_blank">Run your code</a></li>
                     <li><a href="http://webdesign.tutsplus.com/tutorials/getting-to-know-github-pages-static-project-pages-fast--webdesign-11501" target="_blank">Make your Github page</a>
