--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
                     </li>
                     <li><a href="http://css-tricks.com/examples/ShapesOfCSS/" target="_blank" title="CSS3  Shapeskit">CSS3 Shapeskit</a>
                     </li>
+                    <li><a href="http://www.cssmatic.com/" target="_blank" title="cssmatic.com">CSS Generator</a>
+                    </li>
                     <li><a href="http://www.colorzilla.com/gradient-editor/" target="_blank" title="ColorZilla Gradient Generator">ColorZilla Gradient Generator</a>
                     </li>                  
                   </ul>
