Added JS Framework link

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                     </li>
                     <li><a href="http://www.learningjquery.com/" target="_blank" title="Learn Jquery">Learning jQuery</a>
                     </li>
+                    <li><a href="https://famo.us/" target="_blank" title="Js Framework for UI">Famous Framework</a>
+                    </li>
                   </ul>
                 </div>
               </div> 
@@ -280,7 +282,7 @@
             <div class="panel panel-default wow bounceInUp">
               <div class="panel-heading" role="tab" id="headingThirteen">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="true" aria-controls="collapseThirteen" title="Learn AngularJS">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="true" aria-controls="collapseThirteen" title="Resposive Templates">
                   Responsive Templates
                   </a>
                 </h4>
